--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
-TWILIO_ACCOUNT_SID=ACxxxxx
-TWILIO_AUTH_TOKEN=xxxx
+TWILIO_ACCOUNT_SID=xxx
+TWILIO_AUTH_TOKEN=xxx
+statusCallback= <URL for your callback listener app>
+AMDOutputValidator= <URL for your twilio serverless function performing the AMD validation>
+TwilioFromNumber=+44xxx
+workspace=WSXXX<the sid of your flex task assignment workplace>
+taskqueue=WQXXX <the sid of the task queue you want to monitor>
